feat(mcp-skill): Skill 渐进式披露（元数据常驻+正文按需加载）；stdio 读超时保护、多类型 content 处理与工具名规范化